policies/bad-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expensive-service
spec:
  type: LoadBalancer  # <--- This is the forbidden setting!
  ports:
  - port: 80
  selector:
    app: demo
